Bug 1749394 - Remove now-expired validation metrics. r=chutten

They served their purpose of validation Gecko integration.
In followups we do some proper migration.

Differential Revision: https://phabricator.services.mozilla.com/D135593